# pstt-project

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  build.rs  config.toml
.cargo/: config.toml
docs/: AUDIO_MEASUREMENT_DEEP_DIVE.md  CLIPPING_EXPLAINED.md  MICROPHONE_MEASUREMENT_EXPLAINED.md  SUPPRESS_WHISPER_OUTPUT.md
src/: audio.rs  buffers.rs  config.rs  input.rs  main.rs  recognition.rs  resampler.rs  sherpa.rs  summary.rs  text_writer.rs  whisper.rs  writer.rs
tmp/: main.rs
