[package]
name = "pstt"
version = "0.1.0"
edition = "2021"

[dependencies]
# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Audio capture
cpal = "0.15"

# Audio processing
rubato = "0.15"
hound = "3.5"

# Threading and synchronization
ringbuf = "0.4"

# Terminal UI
crossterm = "0.27"
ctrlc = "3.4"

# Command line arguments
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = "0.4"

# Speech recognition
vosk = "0.3"
whisper-rs = { version = "0.10", optional = true }

[features]
default = []
whisper = ["whisper-rs"]

[[bin]]
name = "pstt"
path = "src/main.rs"
