[package]
name = "pstt"
version = "0.1.0"
edition = "2021"

[dependencies]
# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Audio capture
cpal = "0.17.1"

# Audio processing
rubato = "0.16.2"
hound = "3.5"

# Threading and synchronization
ringbuf = "0.4.8"

# Terminal UI
crossterm = "0.29"
ctrlc = "3.4"

# Command line arguments
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = "0.4"

# Speech recognition
vosk = "0.3"
whisper-rs = "0.15.1"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }

[features]
default = []

[[bin]]
name = "pstt"
path = "src/main.rs"

# [build]
# rustflags = ["-C", "target-cpu=native"]
