[package]
name = "pstt"
version = "0.1.0"
edition = "2021"

[dependencies]
# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Audio capture
cpal = "0.17.3"

# Audio processing
rubato = "0.16.2"
hound = "3.5"

# Threading and synchronization
ringbuf = "0.4.8"

# Terminal UI
crossterm = "0.29"
ctrlc = "3.5.2"

# Command line arguments
clap = { version = "4.5.60", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11.9"

# Time handling
chrono = "0.4.44"

# Speech recognition
vosk = "0.3"
whisper-rs = { version="0.15.1"}
whisper-rs-sys = { version = "0.14.1", features = ["force-debug"] }  
reqwest = { version = "0.13.2", features = ["json", "blocking"] }

[features]
default = []

[patch.crates-io]
# Redirect all requests for whisper-rs to your modified local folder
# whisper-rs = { path = "../custom/whisper-rs" }


[[bin]]
name = "pstt"
path = "src/main.rs"

